<resources>
    <string name="app_name">SRD 5.1\nLibro de Hechizos</string>

    <string name="casting_time">Lanzamiento</string>
    <string name="range">Alcance</string>
    <string name="components">Componentes</string>
    <string name="duration">Duración</string>
    <string name="at_higher_levels">En niveles superiores</string>
    <string name="component_description">Descripción componentes</string>

    <string name="no_avatars_title">No hay personajes</string>
    <string name="no_avatars_message">Todavía no has creado ningún personaje ¿Quieres crearlo ahora?</string>
    <string name="avatar_selection_title">Seleccionar Personaje</string>

    <string name="conjuration">Conjuración</string>
    <string name="evocation">Evocación</string>
    <string name="abjuration">Abjuración</string>
    <string name="illusion">Ilusión</string>
    <string name="enchantment">Encantamiento</string>
    <string name="necromancy">Necromancia</string>
    <string name="transmutation">Transmutación</string>
    <string name="divination">Adivinación</string>

    <string name="none">None</string>
    <string name="bard">Bardo</string>
    <string name="warlock">Brujo</string>
    <string name="cleric">Clérigo</string>
    <string name="druid">Druida</string>
    <string name="ranger">Explorador</string>
    <string name="sorcerer">Hechicero</string>
    <string name="wizard">Mago</string>
    <string name="paladin">Paladín</string>
    <string name="name">Nombre</string>
    <string name="name_hint">Nombre del avatar</string>
    <string name="profession">Profesión</string>

    <string name="avatar_creation">Crear Personaje</string>
    <string name="show_avatars">Mis personajes</string>
    <string name="spells">Hechizos</string>
    <string name="characters">Personajes</string>
    <string name="no_spells_message">No hay hechizos</string>
    <string name="delete">Borrar</string>
    <string name="filter">Filtro</string>
    <string name="search">Búsqueda</string>
    <string name="school">Escuelas de magía</string>
    <string name="class_filter_message">Filtrar los hechizos por clases</string>
    <string name="school_message">Filtrar los hechizos por escuelas de magía</string>
    <string name="preferences">Preferencias</string>
    <string name="order_by">Ordenar por</string>
    <string name="level">Nivel</string>
    <string name="no_avatar_message_simplified">Todavía no has creado ningún personaje</string>
    <string name="spell_deleted_message">El hechizo ha sido eliminado</string>
    <string name="undo">DESHACER</string>
    <string name="settings">Configuración</string>
    <string name="about">Acerca de...</string>
    <string name="about_description"><![CDATA[<html><head><style>body {color:#444444; line-height: 22px}</style></head><body align=\"justify\";><p><b>SRD 5.1 Libro de hechizos</b> es una app fanmade sin ánimo de lucro. Este proyecto ha sido realizado como ejemplo de una arquitectura de tipo Clean (Robert C. Martin, 2017. <i>Clean architecture</i>).  El código de la aplicación está sujeto a la licencia <i>Apache v2.0</i>, y se encuentra disponible en el siguiente link:</p></body></html>]]></string>
    <string name="nosolorol_description"><![CDATA[<html><head><style>body {color:#444444; line-height: 22px}</style></head><body align=\"justify\";><p>La descripción de los hechizos ha sido posible gracias a la liberación de la traducción del SRD 5.1 de WOF de Nosolorol, cuya traducción ha sido realizada por Ana Navalón. Mas info en:</p></body></html>]]></string>
    <string name="nosolorl_link" translatable="false">http://srd.nosolorol.com/DD5/index.html</string>
    <string name="github_link" translatable="false">https://github.com/santukis</string>
    <string name="school_filter_message">Filtra las búsquedas por escuela de magia</string>
    <string name="description_html_start" translatable="false"><![CDATA[<html><head><style>body {color:#444444; line-height: 22px}</style></head><body align=\"justify\";>]]></string>
    <string name="description_html_end" translatable="false"><![CDATA[</body></html>]]></string>
    <string name="avatar_deleted_message">El personaje ha sido eliminado</string>
    <string name="profession_filter_message">Filtra las búsquedas por clases</string>
    <string name="classes">Clases</string>
    <string name="cantrip">Truco</string>

</resources>
