<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.view.MainActivity">

    <PreferenceCategory
        android:layout="@layout/preference_category_summary"
        android:summary="@string/school_filter_message"
        android:title="@string/school" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="ABJURATION"
        android:persistent="true"
        android:title="@string/abjuration" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="DIVINATION"
        android:persistent="true"
        android:title="@string/divination" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="CONJURATION"
        android:persistent="true"
        android:title="@string/conjuration" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="ENCHANTMENT"
        android:persistent="true"
        android:title="@string/enchantment" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="EVOCATION"
        android:persistent="true"
        android:title="@string/evocation" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="ILLUSION"
        android:persistent="true"
        android:title="@string/illusion" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="NECROMANCY"
        android:persistent="true"
        android:title="@string/necromancy" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="TRANSMUTATION"
        android:persistent="true"
        android:title="@string/transmutation" />

</PreferenceScreen>