<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_avatar_creation"
        android:icon="@drawable/ic_add_character"
        android:title="@string/avatar_creation" />

    <item
        android:id="@+id/navigation_show_avatars"
        android:icon="@drawable/ic_avatars"
        android:title="@string/show_avatars" />

    <item
        android:id="@+id/navigation_show_spells"
        android:icon="@drawable/speel_book"
        android:title="@string/spells" />

    <item android:title="@string/settings">

        <menu>
            <item
                android:id="@+id/navigation_show_preferences"
                android:icon="@drawable/ic_settings"
                android:title="@string/preferences" />

            <item
                android:id="@+id/navigation_show_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
