<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/bt_paladin"
        android:layout_marginBottom="20dp"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/tv_profession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="16sp"
        tools:text="Paladín"/>

    <ImageButton
        android:id="@+id/bt_paladin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tv_profession"
        android:layout_marginBottom="64dp"
        android:tag="PALADIN"
        android:background="@drawable/paladin_button"
        android:contentDescription="@string/paladin"/>

    <ImageButton
        android:id="@+id/bt_cleric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/bt_paladin"
        android:layout_alignTop="@+id/bt_paladin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:tag="CLERIC"
        android:background="@drawable/cleric_button"
        android:contentDescription="@string/cleric" />

    <ImageButton
        android:id="@+id/bt_ranger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/bt_paladin"
        android:layout_alignTop="@+id/bt_paladin"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:tag="RANGER"
        android:background="@drawable/ranger_button"
        android:contentDescription="@string/ranger" />

    <ImageButton
        android:id="@+id/bt_warlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/bt_cleric"
        android:layout_marginEnd="32dp"
        android:layout_centerVertical="true"
        android:tag="WARLOCK"
        android:background="@drawable/warlock_button"
        android:contentDescription="@string/warlock" />

    <ImageButton
        android:id="@+id/bt_druid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bt_ranger"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:tag="DRUID"
        android:background="@drawable/druid_button"
        android:contentDescription="@string/druid" />

    <ImageButton
        android:id="@+id/bt_wizard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/bt_bard"
        android:layout_alignBottom="@+id/bt_bard"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:tag="WIZARD"
        android:background="@drawable/wizard_button"
        android:contentDescription="@string/wizard" />

    <ImageButton
        android:id="@+id/bt_sorcerer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/bt_bard"
        android:layout_alignBottom="@+id/bt_bard"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="16dp"
        android:tag="SORCERER"
        android:background="@drawable/sorcerer_button"
        android:contentDescription="@string/sorcerer" />

    <ImageButton
        android:id="@+id/bt_bard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_profession"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:tag="BARD"
        android:background="@drawable/bard_button"
        android:contentDescription="@string/bard" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        app:backgroundTint="@drawable/save_button"
        android:src="@drawable/ic_save"
        app:fabSize="mini"/>


</RelativeLayout>